--- a/Desktop/Currency Converter/style.css
+++ b/Desktop/Currency Converter/style.css
@@ -10,6 +10,15 @@ body{
 
 }
 
+button {
+    background: rgb(167, 167, 167);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .container{
     background-color: darkcyan;
     color: aliceblue;
